alignment issues fixed

--- a/src/app/components/videoplayer/videoplayer.component.scss
+++ b/src/app/components/videoplayer/videoplayer.component.scss
@@ -4,12 +4,14 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
 
   .video-player-container {
     width: 100%;
     max-width: 800px;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     h2 {
       color: #000;
       margin-bottom: 15px;
@@ -23,6 +25,7 @@
     p {
       color: #dc4646;
       margin-top: 10px;
+      text-align: center;
 
       &.subtitle {
         color: #666;
